--- a/playbooks/flow_playbooks/fetch-d42-smax-dvcs-compare.yaml
+++ b/playbooks/flow_playbooks/fetch-d42-smax-dvcs-compare.yaml
@@ -79,42 +79,43 @@
         msg: "{{ item.properties }}"
       loop: "{{ smax_devices }}"
 
-    - name: SMAX cihazlarını normalize et (Device42 formatına dönüştür)
+    - name: D42 cihazlarını SMAX properties formatına dönüştür
       set_fact:
-        smax_devices_normalized: >-
-          {{ smax_devices | map('combine', {
-            'device_id': (item.properties.D42id_c | default(item.properties.Id | default(''))),
-            'name': (item.properties.DisplayLabel | default('')),
-            'ram': (item.properties.MemorySize | default('')),
-            'os': (item.properties.OsName | default('')),
-            'ip_addresses': (item.properties.IpAddresses | default('')),
-            'hdd_details': (item.properties.DiskDevices | default('')),
-            'cpus': (item.properties.Cpus | default(''))
-          }) | list }}
-      loop: "{{ smax_devices }}"
+        d42_devices_properties: >-
+          {{ d42_devices | map('combine', {'properties': {
+            'D42id_c': (item.device_id | string),
+            'DisplayLabel': item.name | default(''),
+            'MemorySize': item.ram | default(''),
+            'OsName': item.os | default(''),
+            'IpAddresses': item.ip_addresses | default([]),
+            'Cpus': item.cpucount | default(''),
+            'DiskDevices': item.hdd_details | default([]),
+            'NetworkCards': item.mac_addresses | default([])
+          }}) | list }}
+      loop: "{{ d42_devices }}"
       loop_control:
         loop_var: item
 
-    - name: D42 ve SMAX cihazlarını D42id_c/id üzerinden eşleştir
+    - name: D42 ve SMAX cihazlarını D42id_c/id üzerinden eşleştir (properties formatı ile)
       set_fact:
-        d42_ids: "{{ d42_devices | map(attribute='device_id') | select('string') | list }}"
-        smax_ids: "{{ smax_devices_normalized | map(attribute='device_id') | select('string') | list }}"
+        d42_ids: "{{ d42_devices_properties | map(attribute='properties') | map(attribute='D42id_c') | select('string') | list }}"
+        smax_ids: "{{ smax_devices | map(attribute='properties') | map(attribute='D42id_c') | select('string') | list }}"
 
     - name: D42'de olup SMAX'de olmayan cihazları bul (Yeni Yazdırılacak Cihazlar)
       set_fact:
         yeni_yazdirilacak_cihazlar: >-
-          {{ d42_devices | selectattr('device_id', 'defined') | selectattr('device_id', 'in', (d42_ids | difference(smax_ids))) | list }}
+          {{ d42_devices_properties | selectattr('properties.D42id_c', 'in', (d42_ids | difference(smax_ids))) | list }}
 
     - name: İki tarafta da olup farklı olan cihazları bul (Güncellenecek Cihazlar)
       set_fact:
         guncellenecek_cihazlar: >-
-          {{ d42_devices | selectattr('device_id', 'in', (d42_ids | intersect(smax_ids))) | selectattr('device_id', 'defined') | list }}
+          {{ d42_devices_properties | selectattr('properties.D42id_c', 'in', (d42_ids | intersect(smax_ids))) | list }}
 
     - name: Sonuçları göster
       debug:
         msg: |
           Yeni Yazdırılacak Cihazlar (D42'de olup SMAX'de olmayanlar):
-          {{ yeni_yazdirilacak_cihazlar | map(attribute='name') | list }}
+          {{ yeni_yazdirilacak_cihazlar | map(attribute='properties.DisplayLabel') | list }}
 
           Güncellenecek Cihazlar (İki tarafta da olup farklı olanlar):
-          {{ guncellenecek_cihazlar | map(attribute='name') | list }}
+          {{ guncellenecek_cihazlar | map(attribute='properties.DisplayLabel') | list }}
