--- a/playbooks/flow_playbooks/fetch-d42-smax-dvcs-compare.yaml
+++ b/playbooks/flow_playbooks/fetch-d42-smax-dvcs-compare.yaml
@@ -105,20 +105,28 @@
       debug:
         var: smax_devices_mapped
 
-    - name: D42 ve SMAX cihazlarını D42id_c/id üzerinden eşleştir
+    - name: Device42'den gelen cihaz adlarını göster
+      debug:
+        msg: "{{ d42_devices | map(attribute='name') | list }}"
+
+    - name: SMAX'ten gelen cihaz adlarını göster
+      debug:
+        msg: "{{ smax_devices_mapped | map(attribute='name') | list }}"
+
+    - name: D42 ve SMAX cihazlarını isim (name) üzerinden eşleştir
       set_fact:
-        d42_ids: "{{ d42_devices | map(attribute='device_id') | select('string') | list }}"
-        smax_ids: "{{ smax_devices_mapped | map(attribute='device_id') | select('string') | list }}"
+        d42_names: "{{ d42_devices | map(attribute='name') | select('string') | list }}"
+        smax_names: "{{ smax_devices_mapped | map(attribute='name') | select('string') | list }}"
 
     - name: D42'de olup SMAX'de olmayan cihazları bul (Yeni Yazdırılacak Cihazlar)
       set_fact:
         yeni_yazdirilacak_cihazlar: >-
-          {{ d42_devices | selectattr('device_id', 'defined') | selectattr('device_id', 'in', (d42_ids | difference(smax_ids))) | list }}
+          {{ d42_devices | selectattr('name', 'defined') | selectattr('name', 'in', (d42_names | difference(smax_names))) | list }}
 
     - name: İki tarafta da olup farklı olan cihazları bul (Güncellenecek Cihazlar)
       set_fact:
         guncellenecek_cihazlar: >-
-          {{ d42_devices | selectattr('device_id', 'in', (d42_ids | intersect(smax_ids))) | selectattr('device_id', 'defined') | list }}
+          {{ d42_devices | selectattr('name', 'in', (d42_names | intersect(smax_names))) | selectattr('name', 'defined') | list }}
 
     - name: Sonuçları göster
       debug:
