--- a/playbooks/flow_playbooks/fetch-d42-smax-dvcs-compare.yaml
+++ b/playbooks/flow_playbooks/fetch-d42-smax-dvcs-compare.yaml
@@ -128,10 +128,6 @@
       set_fact:
         smax_dict: "{{ dict(smax_devices_mapped | map(attribute='name') | zip(smax_devices_mapped)) }}"
 
-    - name: Güncellenecek cihazları bul (LastUpdated karşılaştırmalı)
-      set_fact:
-        guncellenecek_cihazlar: []
-
     - name: LastUpdated karşılaştırması yap ve güncellenecek cihazları belirle
       set_fact:
         guncellenecek_cihazlar: >-
@@ -154,21 +150,17 @@
       vars:
         smax_dict: "{{ dict(smax_devices_mapped | map(attribute='name') | zip(smax_devices_mapped)) }}"
       debug:
-        msg: "Güncellenecek cihaz bulunamadı"
-      when: guncellenecek_cihazlar is not defined or guncellenecek_cihazlar | length == 0
-
-    - name: Güncellenecek cihazlarda LastUpdated bilgilerini göster (detaylı)
-      vars:
-        smax_dict: "{{ dict(smax_devices_mapped | map(attribute='name') | zip(smax_devices_mapped)) }}"
-      debug:
         msg: >-
-          {% for device in guncellenecek_cihazlar %}
-          Cihaz: {{ device.name }}
-          Device42 LastUpdated: {{ device.last_updated }}
-          SMAX LastUpdateTime: {{ smax_dict[device.name].last_update_time | default('YOK') }}
-          ---
-          {% endfor %}
-      when: guncellenecek_cihazlar is defined and guncellenecek_cihazlar | length > 0
+          {% if guncellenecek_cihazlar is defined and guncellenecek_cihazlar | length > 0 %}
+            {% for device in guncellenecek_cihazlar %}
+            Cihaz: {{ device.name }}
+            Device42 LastUpdated: {{ device.last_updated }}
+            SMAX LastUpdateTime: {{ smax_dict[device.name].last_update_time | default('YOK') }}
+            ---
+            {% endfor %}
+          {% else %}
+            Güncellenecek cihaz bulunamadı
+          {% endif %}
 
     - name: Sonuçları göster
       debug:
