--- a/playbooks/flow_playbooks/fetch-d42-smax-dvcs-compare.yaml
+++ b/playbooks/flow_playbooks/fetch-d42-smax-dvcs-compare.yaml
@@ -139,7 +139,7 @@
               {% set smax_device = smax_dict.get(d42_device.name) %}
               {% if smax_device and smax_device.last_update_time is defined %}
                 {% set d42_epoch = (d42_device.last_updated | to_datetime('%Y-%m-%dT%H:%M:%S.%fZ')).timestamp() | int %}
-                {% set smax_epoch = (smax_device.last_update_time // 1000) | int %}
+                {% set smax_epoch = (smax_device.last_update_time | int // 1000) %}
                 {% if d42_epoch > smax_epoch %}
                   {% set _ = result.append(d42_device) %}
                 {% endif %}
